--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -16,6 +16,18 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="20dp"
-        android:src="@drawable/flash"
+        android:src="@drawable/start1"
+        android:layout_weight="1"/>
+    <ImageView
+        android:id="@+id/img_flash2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:adjustViewBounds="true"
+        android:paddingBottom="20dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="20dp"
+        android:src="@drawable/start2"
         android:layout_weight="1"/>
 </LinearLayout>
