--- a/app/src/main/res/layout/activity_store_focus.xml
+++ b/app/src/main/res/layout/activity_store_focus.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -45,14 +46,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                 <VideoView
                     android:id="@+id/vv"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentRight="true"
-                    android:adjustViewBounds="true" />
-
+                    android:layout_gravity="center"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+                </android.support.constraint.ConstraintLayout>
                 <ImageView
                     android:id="@+id/player"
                     android:layout_width="50dp"
