--- a/app/src/main/res/layout/activity_store_focus.xml
+++ b/app/src/main/res/layout/activity_store_focus.xml
@@ -66,7 +66,18 @@
                     android:layout_centerInParent="true"
                     android:adjustViewBounds="true"
                     android:onClick="onClick"
-                    android:src="@drawable/play" />
+                    android:src="@drawable/play"
+                    android:visibility="visible"/>
+
+                <ProgressBar
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:adjustViewBounds="true"
+                    android:progress="50"
+                    android:progressDrawable="@drawable/custom_progressbar"
+                    android:id="@+id/Progressbar"
+                    android:visibility="gone"/>
             </RelativeLayout>
 
             <TextView
