--- a/app/src/main/res/layout/fullscreen_videoview.xml
+++ b/app/src/main/res/layout/fullscreen_videoview.xml
@@ -15,4 +15,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"></VideoView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/Progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:progress="50"
+            android:progressDrawable="@drawable/custom_progressbar" />
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
