--- a/app/src/main/res/layout/activity_local.xml
+++ b/app/src/main/res/layout/activity_local.xml
@@ -86,12 +86,14 @@
             android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/layout_3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
-                android:background="#334475">>
+                android:background="#334475"
+                android:onClick="onClick">>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -103,12 +105,14 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/layout_4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
-                android:background="#334475">>
+                android:background="#334475"
+                android:onClick="onClick">>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -129,12 +133,14 @@
             android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/layout_5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
-                android:background="#334475">>
+                android:background="#334475"
+                android:onClick="onClick">>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -146,12 +152,14 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/layout_6"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
-                android:background="#334475">>
+                android:background="#334475"
+                android:onClick="onClick">>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -175,12 +183,14 @@
             android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/layout_7"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
-                android:background="#334475">>
+                android:background="#334475"
+                android:onClick="onClick">>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -192,12 +202,14 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/layout_8"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
-                android:background="#334475">>
+                android:background="#334475"
+                android:onClick="onClick">>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -218,12 +230,14 @@
             android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/layout_9"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
-                android:background="#334475">>
+                android:background="#334475"
+                android:onClick="onClick">>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -235,12 +249,14 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/layout_10"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
-                android:background="#334475">>
+                android:background="#334475"
+                android:onClick="onClick">>
 
                 <TextView
                     android:layout_width="match_parent"
