--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <test.ojig.Uitility.FullScreenImage_ViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/fullscreen_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         />
 
     <RelativeLayout
