--- a/app/src/main/res/layout/activity_others_txt.xml
+++ b/app/src/main/res/layout/activity_others_txt.xml
@@ -7,18 +7,17 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="10dp">
+        android:layout_height="50dp">
 
         <ImageView
             android:id="@+id/img_back"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/back"
-            android:layout_centerVertical="true"/>
+            android:src="@drawable/back" />
 
         <TextView
             android:id="@+id/tv_gamename"
@@ -71,7 +70,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="18dp"
+                        android:layout_width="16dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/icon_call" />
@@ -122,7 +121,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="18dp"
+                        android:layout_width="16dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/icon_call" />
@@ -173,7 +172,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="18dp"
+                        android:layout_width="16dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/icon_call" />
@@ -222,7 +221,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="18dp"
+                        android:layout_width="16dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/icon_call" />
@@ -271,7 +270,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="18dp"
+                        android:layout_width="16dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/icon_call" />
@@ -321,7 +320,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="24dp"
+                        android:layout_width="22dp"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/icon_next" />
